--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.2.4",
     "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0",
     "workbox-build": "^7.3.0",
     "workbox-window": "^7.3.0"
   },
