--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/test-utils": "^2.4.1",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "^9.15.1",
+    "jquery": "^3.7.1",
     "jsdom": "^26.0.0",
     "prettier": "^3.0.0",
     "typescript": "^5.8.2",
