--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
     "workbox-build": "^7.3.0",
-    "workbox-window": "^7.3.0"
+    "workbox-window": "^7.3.0",
+    "yandex-metrika-vue3": "^1.3.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
