--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "core-js": "^3.41.0",
     "pinia": "^3.0.1",
+    "regenerator-runtime": "^0.14.1",
     "vite-plugin-pwa": "^0.21.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
@@ -25,8 +27,11 @@
     "yandex-metrika-vue3": "^1.3.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/lodash": "^4.17.16",
+    "@vitejs/plugin-legacy": "^6.0.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.1",
