Убрал vuex, заменил везде на pinia, добавил тесты для пиниа (#81)
* Убрал vuex, заменил везде на pinia, добавил тесты для пиниа

* Добавил миграцию для старого ключа 'vuex' в локальном хранилище браузера

* Добавил сохранение backup стора и восстановление, в случае ошибки во время миграции

---------

Co-authored-by: Nemtyrev.S <sn.simens@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
   "editor.formatOnSave": true,
   "[vue]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
