--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "core-js": "^3.41.0",
     "firebase": "^11.5.0",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "regenerator-runtime": "^0.14.1",
     "vite-plugin-pwa": "^0.21.1",
     "vue": "3.5.13",
     "vue-router": "^4.2.4",
     "vue3-cookies": "^1.0.6",
-    "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0",
     "workbox-build": "^7.3.0",
     "workbox-window": "^7.3.0",
     "yandex-metrika-vue3": "^1.3.4"
@@ -33,6 +32,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.22.0",
+    "@pinia/testing": "^1.0.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/lodash": "^4.17.16",
     "@vitejs/plugin-legacy": "^6.0.2",
