--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ pages:
     - npm install
     - VITE_BASE_URL=/reyohoho/ npm run build
     - mkdir .public
-    - cp -r ./dist/ .public
+    - cp -r ./dist/* .public
     - mv .public public
   artifacts:
     paths:
