--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "regenerator-runtime": "^0.14.1",
     "vite-plugin-pwa": "^0.21.1",
     "vue": "3.5.13",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.4",
     "vue3-cookies": "^1.0.6",
     "workbox-build": "^7.3.0",
