--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@supabase/supabase-js": "^2.91.1",
     "axios": "^1.8.2",
     "core-js": "^3.41.0",
     "firebase": "^11.5.0",
