--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ VITE_FIREBASE_STORAGE_BUCKET=reyohoho.firebasestorage.app
 VITE_FIREBASE_MSG_SENDER_ID=391868605461
 VITE_FIREBASE_APP_ID=1:391868605461:web:b2336f900357b6cd939a1c
 VITE_APP_VERSION=1.0.32
+VITE_SUPABASE_URL=https://ltkjpsgkrvtavopazdtg.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_secret_blyeADoCHaUurH3Sr3UXJg_N5sKsHF_
