--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ VITE_FIREBASE_APP_ID=1:391868605461:web:b2336f900357b6cd939a1c
 VITE_APP_VERSION=1.0.32
 VITE_SUPABASE_URL=https://ltkjpsgkrvtavopazdtg.supabase.co
 VITE_SUPABASE_ANON_KEY=sb_publishable_PBL6fylJogO_6H8AF3vLLA_UJqbQ-Rq
-
+JWT_SECRET=Kj8mN2pL9qR4sT7vW1xY3zA6bC0dE5fG
